# Typthon

./: .builderignore  .editorconfig  .gitignore  .rustfmt.toml  .typyrc.example  ARCHITECTURE.md  ATTRIBUTE_RESOLUTION_CHECKLIST.md  Builderfile  Builderspace  CRITICAL_PATH_COMPLETE.md  Cargo.toml  Makefile  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SETUP.md  build.rs  pyproject.toml
.github/workflows/: ci.yml
benches/: simd.rs
cpp/include/typthon/: typthon.hpp
cpp/src/ffi/: ffi.cpp
docs/: CONTRIBUTING.md  PERFORMANCE_ARCHITECTURE.md  PROTOCOL_CHECKING.md
examples/: advanced_integration.py  attribute_resolution.py  location_extraction.py
python/typthon/: README.md  __init__.py
python/typthon/checker/: __init__.py  check.py
python/typthon/core/: __init__.py  validator.py
python/typthon/decorators/: __init__.py  type.py
python/typthon/types/: __init__.py  constructs.py  effects.py  protocols.py
scripts/: README.md  profile.sh  setup.sh
src/: STRUCTURE.md  lib.rs
src/analysis/: advanced.rs  bidirectional.rs  checker.rs  constraints.rs  effects.rs  inference.rs  mod.rs  protocols.rs  refinement.rs  variance.rs
src/ast/: location.rs  mod.rs  visitor.rs  walker.rs
src/core/: intern.rs  mod.rs  types.rs
src/errors/: mod.rs
src/ffi/: cpp_ffi.rs  mod.rs
src/frontend/: cli.rs  config.rs  mod.rs
src/internal/: mod.rs
src/internal/compiler/: lib.rs  mod.rs
src/internal/core/: mod.rs
src/internal/runtime/: lib.rs  mod.rs
src/performance/: arena.rs  cache.rs  metrics.rs  mod.rs  parallel.rs
src/typhton/: lib.rs
tests/: README.md  conftest.py  pytest.ini  run_all_tests.py  test_01_basic_types.py  test_02_collections.py  test_03_type_inference.py  test_04_union_intersection.py  test_05_classes_oop.py  test_06_effects.py  test_07_generics.py  test_advanced.py  test_attribute_resolution.py  test_benchmarks.py  test_inference.py  test_integration.py  test_performance.py  test_protocol_checking.py  test_protocol_checking.rs  testerino.py
typthon-compiler/: .gitignore  ARCHITECTURE.md  CODEGEN_STATUS.md  Makefile  README.md  go.mod
typthon-compiler/cmd/typthon/: main.go
typthon-compiler/pkg/codegen/amd64/: README.md  amd64.go  amd64_test.go  params.go  test_runner.sh  validator.go  validator_test.go
typthon-compiler/pkg/codegen/arm64/: README.md  arm64.go  arm64_test.go  peephole.go  pgo.go  (+6 more)
typthon-compiler/pkg/frontend/: frontend.go  lexer.go  lexer_simple.go  parser.go  parser_match.go
typthon-compiler/pkg/interop/: interop.go  protocols.go  typenarrow.go  types.go
typthon-compiler/pkg/ir/: build.go  build_match.go  ir.go
typthon-compiler/pkg/linker/: linker.go
typthon-compiler/pkg/logger/: README.md  logger.go
typthon-compiler/pkg/optimizer/: loops.go  optimizer.go  peephole.go  pgo.go
typthon-compiler/pkg/ssa/: ssa.go
typthon-compiler/pkg/stdlib/: CHANGELOG.md  README.md  advancedcollections.go  async.go  collections.go  examples_test.go  http.go  io.go  itertools.go  json.go  math.go  regex.go  strings.go
typthon-compiler/runtime/: runtime.c  runtime.h
typthon-compiler/tests/: run_tests.sh  test_add  test_add.py  test_add_comprehensive.c  test_add_main.c  test_all_ops  test_all_ops.py  test_all_ops_final  test_all_ops_main.c  test_amd64_asm.go  test_arithmetic  test_arithmetic.py  test_class.py  test_compare  test_compare.py  test_comparison.py  test_fibonacci.py  test_if.py  test_if_else_simple  test_if_else_simple.py  test_list_simple.py  test_multiply  test_multiply.py  test_multiply_main.c  test_optimizations.py  test_register_allocation.py  test_simple  test_simple.py  test_simple_if  test_simple_if.py  test_simple_new  test_subtract  test_subtract.py  test_subtract_temp  test_validator_features.py  test_while.py  test_while_simple  test_while_simple.py
typthon-core/: README.md  lib.rs
typthon-core/benches/: incremental.rs
typthon-core/bindings/: c_api.rs  mod.rs  python_ffi.rs
typthon-core/cli/: main.rs
typthon-core/compiler/analysis/: advanced.rs  bidirectional.rs  checker.rs  constraints.rs  effects.rs  inference.rs  mod.rs  protocols.rs  refinement.rs  variance.rs
typthon-core/compiler/ast/: location.rs  mod.rs  walker.rs
typthon-core/compiler/errors/: mod.rs
typthon-core/compiler/frontend/: cli.rs  config.rs  mod.rs  parser.rs
typthon-core/compiler/types/: intern.rs  mod.rs  types.rs
typthon-core/docs/: ADVANCED_FEATURES_INTEGRATION.md  ATTRIBUTE_RESOLUTION.md  ATTRIBUTE_RESOLUTION_SUMMARY.md  LOCATION_EXTRACTION.md
typthon-core/examples/: advanced_features.py  basic_usage.py  effect_system_demo.py  protocol_checking.py  simd_optimization.py
typthon-core/infrastructure/: cache.rs  incremental.rs  logging.rs  mod.rs  parallel.rs
typthon-core/infrastructure/concurrency/: actor.rs  async_io.rs  integration.rs  mod.rs  pipeline.rs  query.rs  structured.rs
typthon-core/runtime/cpp/: README.md
typthon-core/tests/: conftest.py  test_advanced_integration.py  test_attr_resolution.rs  test_checker.py  test_effect_integration.py  test_protocol_checking.rs  test_runtime.py  test_types.py
typthon-lsp/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md
typthon-lsp/src/: analyzer.rs  completion.rs  diagnostics.rs  main.rs
typthon-lsp/tests/: integration_tests.rs
typthon-runtime/: Cargo.toml  README.md  libmod.rlib
typthon-runtime/benches/: allocator.rs  gc.rs
typthon-runtime/examples/: minimal.rs
typthon-runtime/src/: allocator.rs  builtins.rs  ffi.rs  gc.rs  interop.rs  lib.rs  logging.rs  objects.rs
typthon-runtime/src/allocator/: README.md  arena.rs  bump.rs  header.rs  mod.rs  tests.rs
typthon-runtime/src/builtins/: README.md  dict.rs  float.rs  iter.rs  len.rs  list.rs  mod.rs  operations.rs  print.rs  string.rs  tests.rs  tuple.rs
typthon-runtime/src/ffi/: README.md  mod.rs  object.rs  refcount.rs
typthon-runtime/src/gc/: README.md  cycles.rs  mod.rs  refcount.rs  roots.rs  tests.rs
typthon-runtime/src/interop/: README.md  abi.rs  call.rs  library.rs  marshal.rs  mod.rs  tests.rs  types.rs
typthon-runtime/src/logging/: macros.rs  mod.rs
(+22 files in other folders)
