[package]
name = "typthon"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lib]
name = "typthon"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "typthon"
path = "src/bin/typthon.rs"
required-features = []

[features]
default = []
python = ["pyo3"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py310"], optional = true }
rustpython-parser = "0.3"
petgraph = "0.6"
dashmap = "5.5"
rayon = "1.8"
bitvec = "1.0"
smallvec = "1.11"
cc = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
glob = "0.3"
num-traits = "0.2"

# Phase 4: Performance optimizations
salsa = "0.16"
blake3 = "1.5"
bincode = "1.3"
zstd = "0.13"
typed-arena = "2.0"
parking_lot = "0.12"
crossbeam = "0.8"
lru = "0.12"
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
proptest = "1.4"

[[bench]]
name = "simd"
harness = false

[[bench]]
name = "incremental"
harness = false

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

