[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "typthon"
version = "0.1.0"
description = "A high-performance gradual type system for Python with Rust and C++ acceleration"
requires-python = ">=3.10"
authors = [{name = "Griffin Strier"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["types", "type-checker", "static-analysis", "runtime-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: C++",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.maturin]
python-source = "typthon-core/runtime/python"
module-name = "typthon._core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true

