[package]
name = "typthon-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Griffin Strier"]
description = "Language Server Protocol implementation for Typthon"
license = "MIT"

[[bin]]
name = "typthon-lsp"
path = "src/main.rs"

[dependencies]
# LSP implementation
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime
async-trait = "0.1"

# Core typthon functionality
rustpython-parser = "0.3"
dashmap = "5.5"

