[package]
name = "typthon-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lib]
name = "typthon_runtime"
crate-type = ["staticlib", "rlib"]

[dependencies]
# Lock-free concurrency primitives
dashmap = "6.0"           # Lock-free concurrent HashMap/HashSet
parking_lot = "0.12"      # Faster, smaller mutexes than std
once_cell = "1.19"        # Lazy static initialization

# Platform-specific OS APIs
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "allocator"
harness = false

[[bench]]
name = "gc"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"  # No unwinding in runtime

[profile.dev]
opt-level = 1  # Some optimization even in dev

